# Pytorch_Retinaface

./: .gitignore  README.md  __init__.py  detect.py  setup.cfg
models/: retinaface.py
retinaface/: __init__.py  convert_to_onnx.py  detect.py  inference_framework.py  test_fddb.py  test_widerface.py
retinaface/layers/modules/: multibox_loss.py
retinaface/models/: retinaface.py
