# Configuration of the Python project

# Configure setup.py
[metadata]
name = retinaface-py
version = 0.0.1
author = Jiankang Deng
maintainer = Andres Prados Torreblanca
maintainer_email = andresprator@gmail.com
description = RetinaFace: Single-stage Dense Face Localisation in the Wild
long_description = file: README.md
long_description_content_type= text/markdown
license = MIT License
url = https://github.com/andresprados/Pytorch_Retinaface
classifiers =
        License :: OSI Approved :: MIT License
        Intended Audience :: Developers
        Intended Audience :: Science/Research
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Topic :: Software Development :: Libraries
        Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >= 3.6
install_requires =
    numpy
    torch>=1.1.0
    torchvision>=0.3.0
    opencv-python

[options.packages.find]
exclude =
    curve*
    widerface_evaluate*

